// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <MDTsCreateForm /> should renders correctly when form is submitted 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="mdtCreateForm"
  >
    <div
      className="form-group-wrapper"
    >
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="serviceTeam"
            label="Service / Team"
            name="serviceTeam"
            placeholder=""
            props={
              Object {
                "isSubmit": true,
              }
            }
            type="text"
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="dateOfRequest"
            label="Date of Request"
            name="dateOfRequest"
            props={
              Object {
                "format": "DD-MMM-YYYY",
                "isSubmit": true,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="dateOfMeeting"
            label="Date of Meeting"
            name="dateOfMeeting"
            props={
              Object {
                "format": "DD-MMM-YYYY",
                "isSubmit": true,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="servicePageLink"
            label="Link to MDT Web Service Directory"
            name="servicePageLink"
            placeholder=""
            props={
              Object {
                "isSubmit": true,
              }
            }
            type="text"
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="question"
            label="Question For MDT"
            name="question"
            props={
              Object {
                "isSubmit": true,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="notes"
            label="Meeting Discussion"
            name="notes"
            props={
              Object {
                "isSubmit": true,
              }
            }
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Component <MDTsCreateForm /> should renders with props correctly 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="mdtCreateForm"
  >
    <div
      className="form-group-wrapper"
    >
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="serviceTeam"
            label="Service / Team"
            name="serviceTeam"
            placeholder=""
            props={
              Object {
                "isSubmit": false,
              }
            }
            type="text"
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="dateOfRequest"
            label="Date of Request"
            name="dateOfRequest"
            props={
              Object {
                "format": "DD-MMM-YYYY",
                "isSubmit": false,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="dateOfMeeting"
            label="Date of Meeting"
            name="dateOfMeeting"
            props={
              Object {
                "format": "DD-MMM-YYYY",
                "isSubmit": false,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="servicePageLink"
            label="Link to MDT Web Service Directory"
            name="servicePageLink"
            placeholder=""
            props={
              Object {
                "isSubmit": false,
              }
            }
            type="text"
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="question"
            label="Question For MDT"
            name="question"
            props={
              Object {
                "isSubmit": false,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="notes"
            label="Meeting Discussion"
            name="notes"
            props={
              Object {
                "isSubmit": false,
              }
            }
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
